@@ -1,5 +1,15 @@
 2007-09-14  Dan Williams  <dcbw@redhat.com>
 
+	* configure.ac
+	  src/Makefile.am
+	  src/applet-compat.c
+	  src/applet-compat.h
+	  src/applet.c
+	  src/applet.h
+		- Handle removal of unused stuff from libnm-util
+
+2007-09-14  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet-dbus-settings.c
 		- (applet_dbus_connection_settings_new_from_connection,
 		   applet_dbus_connection_settings_get_id,
